--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.10",
     "cross-spawn": "^7.0.6",
+    "leva": "^0.10.0",
     "playroomkit": "^0.0.89",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
