action controller ui and logic

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@babel/helpers": "^7.27.6",
     "@babel/runtime": "^7.27.6",
     "@react-three/drei": "^9.114.0",
-    "@react-three/fiber": "^8.17.10",
+    "@react-three/fiber": "8.2.2",
     "cross-spawn": "^7.0.6",
+    "framer-motion": "^11.0.3",
+    "framer-motion-3d": "^11.0.3",
     "leva": "^0.10.0",
     "playroomkit": "^0.0.89",
     "react": "^18.2.0",
